--- a/eGmat.html
+++ b/eGmat.html
@@ -10,7 +10,7 @@
 
         <div class="qvname" id="quantName">
 
-            <span class="name">Quant</span>
+            <div><span class="name">Quant</span></div>
             <br>
             <span class = "inputName">Current</span><input class = "box" type="number" name="current" id="quantCurrent">
 
@@ -20,7 +20,7 @@
 
         <div class="qvname" id="verbalName">
 
-            <span class="name">Verbal</span>
+            <div><span class="name">Verbal</span></div>
             <br>
             <span class = "inputName">Current</span><input class = "box" type="number" name="current" id="verbalCurrent">
 
@@ -31,32 +31,39 @@
         <button id="submitButton">Submit and Refresh</button>
     </div>
 
-    <div id="totalGraphUi">
-       <div><span class="name">Total Score</span></div>
-       <div><span class="name scoreHolder">620</span></div>
-       <div>GRAPH COMES HERE</div>
-       <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. At est vitae amet debitis corporis nulla reiciendis deleniti placeat, optio corrupti molestias alias consectetur cupiditate ut quos labore eligendi quas eveniet!<span></span></div>
-    </div>
-
-    <div id="twoGraphUi">
-
-        <div id = "quantGraphUi" >
-        <div><span class="nameMedium">Total Score</span></div>
-       <div><span class="name quantScoreHolder">Q32</span></div>
-       <div>GRAPH COMES HERE</div>
-       <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. At est vitae amet debitis corporis nulla reiciendis deleniti placeat, optio corrupti molestias alias consectetur cupiditate ut quos labore eligendi quas eveniet!</div>
+    <div id = "graphUi">
+        <div id="totalGraphUi">
+            <div><span class="name">Total Score</span></div>
+            <div><span class="name scoreHolder">620</span></div>
+            <div class="meter">
+            <span>30</span>
+             <span>10</span>
+          </div>
+            <div>Your estimated GMAT score as per your performance in this mock test is <span>620</span>,which is <strong><span>100</span> points</strong> lower than your target GMAT score of <span>720</span>.</div>
         </div>
 
-        <div id = "verbalGraphUi" >
+        <div id="twoGraphUi">
+            <div id = "quantGraphUi" >
                 <div><span class="nameMedium">Total Score</span></div>
-               <div><span class="name verbalScoreHolder">V42</span></div>
-               <div>GRAPH COMES HERE</div>
-               <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. At est vitae amet debitis corporis nulla reiciendis deleniti placeat, optio corrupti molestias alias consectetur cupiditate ut quos labore eligendi quas eveniet!</div>
+                 <div><span class="name quantScoreHolder">Q32</span></div>
+                <div class="meterQuant">
+                 <span>30</span>
+                <span>10</span>
+                </div>
+                <div>Your estimated quantitative score as per your performance in this mock test is <span>Q42</span>,which is <strong><span>+6</span> points</strong> lower than your target quantitative score of <span>Q42</span>.</div>
+            </div>
 
-        </div>
-        
+            <div id = "verbalGraphUi" >
+                    <div><span class="nameMedium">Total Score</span></div>
+                    <div><span class="name verbalScoreHolder">V42</span></div>
+                    <div class="meterVerbal">
+                     <span>30</span>
+                     <span>10</span>
+                    </div>
+                    <div>Your estimated verbal score as per your performance in this mock test is <span>V42</span>,which is <strong><span>+6</span> points</strong> lower than your target verbal score of <span>V42</span>.</div>
+            </div>
     </div>
-
+    </div>
    <script src="eGmat.js"></script>
 </body>
 </html>
